# gimbal-studio

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md
.superpowers/sdd/: task-8-report.md  task-9-report.md
docs/superpowers/plans/: 2026-07-20-gimbal-studio.md
docs/superpowers/specs/: 2026-07-20-gimbal-studio-design.md  2026-07-20-gimbal-studio-hid-extension-design.md  2026-07-22-pad-focus-mode-design.md  2026-07-22-response-speed-presets-design.md  2026-07-22-startup-config-design.md  2026-07-23-repo-root-metadata-design.md
gimbal_studio/: .gitignore  LICENSE  README.md  pyproject.toml
gimbal_studio/scripts/: pack.py
gimbal_studio/src/gimbal_studio/: app.py
gimbal_studio/src/gimbal_studio/project/: __init__.py  defaults.py  ini_io.py  startup.py
gimbal_studio/src/gimbal_studio/protocol/: commands.py
gimbal_studio/src/gimbal_studio/resources/: theme.qss
gimbal_studio/src/gimbal_studio/serial_io/: port.py
gimbal_studio/src/gimbal_studio/transport/: __init__.py  errors.py  hid_link.py  router.py
gimbal_studio/src/gimbal_studio/ui/: control_page.py  groups_page.py  log_page.py  main_window.py  pad_widget.py  runner.py
gimbal_studio/tests/: test_control_page.py  test_groups_page.py  test_hid_link.py  test_ini_io.py  test_main_window.py  test_pack.py  test_protocol.py  test_runner.py  test_smoke_import.py  test_startup_config.py  test_transport_router.py
tools/gimbal_studio/: .gitignore  README.md  pyproject.toml
tools/gimbal_studio/scripts/: pack.py
tools/gimbal_studio/tests/: test_control_page.py  test_groups_page.py  test_ini_io.py  test_pack.py  (+4 more)
(+16 files in other folders)
