[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gimbal-studio"
version = "0.1.1"
description = "Cross-platform serial GUI for ZL-IS2 gimbal / servo controller"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "PySide6>=6.6",
  "pyserial>=3.5",
  "hidapi>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyinstaller>=6.0"]

[project.scripts]
gimbal-studio = "gimbal_studio.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gimbal_studio = ["resources/*.qss", "resources/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
